# python-cpp-bindings-starter

./: .gitignore  CMakeLists.txt  README.md  lefthook.yml  pyproject.toml
.github/workflows/: build.yaml
src/bonacci/: __init__.py
src/bonacci_bindings/: sequence.cpp
